@@ -3,6 +3,7 @@ STARTER_REV "0.15.4"
 SYNCER_REV "v2.10.0"
 GCC_LINUX "9.3.0-r2"
 MSVC_WINDOWS "2019"
+LLVM_CLANG_MACOS "12"
 MACOS_MIN "10.14"
 OPENSSL_LINUX   "1.1.1o"
 OPENSSL_MACOS   "1.1.1o"
